[package]
name = "nebula"
version = "0.1.1"
edition = "2021"

[dependencies]
regex = "1"
serde_json = "1"
ureq = "3"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rand = "0.8"

[profile.dev]
opt-level = 2
