[package]
name = "nebula"
version = "0.1.1"
edition = "2021"

[dependencies]
regex = "1"
serde_json = "1"
ureq = "3"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ed25519-dalek = "2"

[dev-dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }

[profile.dev]
opt-level = 2
